if(DEFINED ENV{POWER_BOARD_ROOT})
	set(BOARD_ROOT "$ENV{POWER_BOARD_ROOT}")
endif()

cmake_minimum_required(VERSION 3.13.1)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(txing_power)

target_sources(app PRIVATE ../src/main.c)

set(POWER_ADV_INTERVAL "0x0800" CACHE STRING "BLE advertising interval in 0.625 ms units")
set(POWER_ADV_TX_POWER_DBM "4" CACHE STRING "BLE advertising TX power in dBm")
set(POWER_ADV_CONNECTABLE "1" CACHE STRING "Enable connectable advertising")
set(POWER_ADV_SCANNABLE "1" CACHE STRING "Enable scannable advertising")
set(POWER_ADV_INCLUDE_UUID "1" CACHE STRING "Include REDCON service UUID in scan response")
set(POWER_GATT "1" CACHE STRING "Enable REDCON GATT wake and battery service")
set(POWER_REDCON_CONN_INTERVAL_MS "100" CACHE STRING "REDCON connection interval request in ms")
set(POWER_REDCON_CONN_LATENCY "0" CACHE STRING "REDCON connection latency request")
set(POWER_REDCON_CONN_SUPERVISION_MS "20000" CACHE STRING "REDCON supervision timeout request in ms")
set(POWER_REDCON_STATE_NOTIFY_INTERVAL_SECONDS "10" CACHE STRING "REDCON state notification interval")
set(POWER_REDCON_IDLE_DISCONNECT_DELAY_MS "500" CACHE STRING "REDCON idle disconnect delay in ms")
set(POWER_REDCON_BATTERY_ADC_SETTLE_MS "100" CACHE STRING "REDCON battery ADC settle delay in ms")

target_compile_definitions(app PRIVATE
	POWER_ADV_INTERVAL=${POWER_ADV_INTERVAL}
	POWER_ADV_TX_POWER_DBM=${POWER_ADV_TX_POWER_DBM}
	POWER_ADV_CONNECTABLE=${POWER_ADV_CONNECTABLE}
	POWER_ADV_SCANNABLE=${POWER_ADV_SCANNABLE}
	POWER_ADV_INCLUDE_UUID=${POWER_ADV_INCLUDE_UUID}
	POWER_GATT=${POWER_GATT}
	POWER_REDCON_CONN_INTERVAL_MS=${POWER_REDCON_CONN_INTERVAL_MS}
	POWER_REDCON_CONN_LATENCY=${POWER_REDCON_CONN_LATENCY}
	POWER_REDCON_CONN_SUPERVISION_MS=${POWER_REDCON_CONN_SUPERVISION_MS}
	POWER_REDCON_STATE_NOTIFY_INTERVAL_SECONDS=${POWER_REDCON_STATE_NOTIFY_INTERVAL_SECONDS}
	POWER_REDCON_IDLE_DISCONNECT_DELAY_MS=${POWER_REDCON_IDLE_DISCONNECT_DELAY_MS}
	POWER_REDCON_BATTERY_ADC_SETTLE_MS=${POWER_REDCON_BATTERY_ADC_SETTLE_MS}
)
