[project]
name = "power-rig"
version = "0.6.0"
description = "Power device-type runtime adapter for txing Raspberry Pi rigs"
requires-python = ">=3.12"
dependencies = [
    "awsiotsdk>=1.22,<2",
    "bleak>=0.22,<1",
    "boto3>=1.34,<2",
    "aws",
    "rig",
]

[project.scripts]
power-rig = "power_rig:main"
power-rig-connectivity-ble = "power_rig.connectivity_ble:main"
power-rig-sparkplug-manager = "power_rig.sparkplug_manager:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
aws = { path = "../../../../shared/aws/python" }
rig = { path = "../../../../rig" }
